# rsweb

./: .gitignore
lib/: Cargo.toml
lib/src/: application.rs  data_mongo.rs  frontend_http.rs  lib.rs
macro/: Cargo.toml
macro/src/: lib.rs
