[package]
name = "rsweb-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.0.0", default-features = false, features = ["async-std-runtime"]}
rsweb_macros = { path = "../macro" }
tokio = { version = "1.12.0" }

serde_json = "1.0"

hyper = "0.14.14"

serde = { version = "1.0.130" }
routerify = "2"
async-trait = "0.1.51"
futures = "0.3.17"
url = "2.2.2"

